[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets Mario/AtlasTexture/goomba_wall_1.tres" type="Texture" id=1]
[ext_resource path="res://Assets Mario/AtlasTexture/goomba_wall_0.tres" type="Texture" id=2]
[ext_resource path="res://Cenas/inimigo.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18, 15 )

[node name="inimigo" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="Animacao" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="Colisao" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 14 )
shape = SubResource( 2 )

[node name="TimerPatrulha" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.13

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 19, 0 )
enabled = true
cast_to = Vector2( 0, 25 )

[connection signal="timeout" from="TimerPatrulha" to="." method="_on_TimerPatrulha_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
